v.3.0.1~beta6
- fix for crash when trying to get last fanart number from Kodi Artist Information Folder

v.3.0.1~beta5
- set slideshow thread to close if no music playing
- removed slideshow idle sleep time setting (no longer needed)

v.3.0.1~beta4
- added options to change sleep time for main and slideshow threads
- fix for property cleaning
- changed entry point default.py to be less complex

v.3.0.1~beta3
- further refinements to reduce CPU usage
- fix for AS taking too long to quit on Kodi exit when in daemon mode

v.3.0.1~beta2
- fix for high CPU usage when using AS in daemon mode and no music playing

v.3.0.1~beta1
- fix for crash if artist image name has an extended character in it

v.3.0.0
- Python2/3 compatible
- rewrite to use a single image control instead of multi-image control in skin
- AS can now store and show music in Kodi 18 music artist folder
- AS now shows the Kodi artist fanart (if available) before anything else (with option to disable)
- added option to include Kodi album fanart in image list (defaults to False)
- added routine in settings to move images to Kodi artist information folder
- added option to disable extranfanart folder
- added option to control time between slide transitions
- AS can now store images and information files in separate directory structure
- AS now deletes empty artist information and artwork folders
- converted language files to current format for forward compatibility
- removed option to have a pop up displayed when downloading artwork

v.2.1.4
- fix for fallback images not showing if all artists on a multi-artist song have no images

v.2.1.3
- fix for common library issue with moving a file

v.2.1.2
- fix for common library issue with moving a file
- fix for crash when trying to trim cache folder

v.2.1.1
- added option to download artist thumb from theaudiodb.com
- added option to store service information files in local artist path